solc_ossfuzz_seed_corpus/test_sol/test_e9caa663fa12760b6778eb3d91829e0bfece2125d58415e1459f2cecfacfe589_6d3bdc2a03f7ea45764dfb12625a9cbb8cf1e3a2_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes22 i0,function () external i1)  returns(uint168 o0,function () external o1,function () external o2)
{ }
function f1(bool i0,bytes18 i1) 
{
}
contract C0 {
  function f2() external returns(bool o0,address o1)
  { }
  function f3(function () external i0,C0 i1) external
  {
{



  {


  }

}
f1(false,(0x823935ccf0af282f3a22dcf2ff2ea999be47 ^ 0x558f7b8da568c5db3635cd17c70cab2f3c45));
  }
  function f4(function () external i0,bytes memory i1) external returns(bytes memory o0,function () external o1,C0 o2)
  {


  }
}
// ----
// TypeError 9553: (su0.sol:336-417): Invalid type for argument in function call. Invalid implicit conversion from int_const 1879...(36 digits omitted)...7282 to bytes18 requested.
